# EmberLynx

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  format.sh
.claude/: settings.json
src/: CMakeLists.txt
src/ember_lynx/: CMakeLists.txt  ember_lynx.cpp  ember_lynx.hpp
src/ember_lynx/eng/: App.cpp  App.hpp  Engine.cpp  Engine.hpp  entry_point.cpp  entry_point.hpp
src/ember_lynx/engine/: App.cpp  App.hpp  Engine.cpp  Engine.hpp  entry_point.cpp  entry_point.hpp
src/ember_lynx/ui/: Window.cpp  Window.hpp
src/ember_lynx/util/: Logger.cpp  Logger.hpp
src/examples/hello_world/: CMakeLists.txt  main.cpp
